OLD/tests/expects/char_failure/test_char_multiple.truk
fn main() : i32 {
  var c: i8 = 'ab';
  return 0;
}
